[gd_scene load_steps=6 format=3 uid="uid://ys4mt3vjts4o"]

[ext_resource type="Script" path="res://scripts/upgrade_area.gd" id="1_w12fs"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eor7y"]
size = Vector3(7.5, 4, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rlo4u"]
transparency = 1
albedo_color = Color(0, 0.662745, 1, 0.588235)

[sub_resource type="BoxMesh" id="BoxMesh_rbq5u"]
size = Vector3(7.5, 4, 0.1)

[sub_resource type="ViewportTexture" id="ViewportTexture_w12fs"]
viewport_path = NodePath("SubViewport")

[node name="UpgradeArea" type="Area3D"]
script = ExtResource("1_w12fs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_eor7y")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("StandardMaterial3D_rlo4u")
mesh = SubResource("BoxMesh_rbq5u")

[node name="Sprite3D" type="Sprite3D" parent="."]
offset = Vector2(0, 0.1)
texture = SubResource("ViewportTexture_w12fs")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(750, 400)

[node name="Label" type="Label" parent="SubViewport"]
offset_right = 750.0
offset_bottom = 400.0
theme_override_font_sizes/font_size = 150
horizontal_alignment = 1
vertical_alignment = 1

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
